// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid.ts should render 1`] = `

<div class="grid">
</div>

`;

exports[`grid.ts should render with any class name 1`] = `

<div class="flex">
</div>

`;

exports[`grid.ts should render with any id 1`] = `

<div class="grid"
     id="test"
>
</div>

`;

exports[`grid.ts should render with any tag 1`] = `

<span class="grid">
</span>

`;
